force-app/main/default/objects/Circuito__c/fields/Distancia_total__c.field-meta.xml
<CustomField>
    <fullName>Distancia_total__c</fullName>
    <formula>Longitud_Km__c *  Vueltas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distancia total de carrera</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>