force-app/main/default/objects/Circuito__c/fields/Fecha_de_carrera__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_carrera__c</fullName>
    <label>Fecha de carrera</label>
    <type>Date</type>
</CustomField>