force-app/main/default/objects/Circuito__c/fields/Longitud_Km__c.field-meta.xml
<CustomField>
    <fullName>Longitud_Km__c</fullName>
    <label>Longitud (Km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>