force-app/main/default/objects/Circuito__c/fields/Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion__c</fullName>
    <inlineHelpText>Ubicación del circuito.</inlineHelpText>
    <label>Ubicacion</label>
    <length>40</length>
    <type>Text</type>
</CustomField>