force-app/main/default/objects/Circuito__c/fields/Vueltas__c.field-meta.xml
<CustomField>
    <fullName>Vueltas__c</fullName>
    <label>Vueltas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>